idk it should work on mobile

--- a/public/chat-room.html
+++ b/public/chat-room.html
@@ -29,40 +29,40 @@
 </div>
 
 <script>
-const socket = io();
-let user = localStorage.getItem('user');
-if(!user){
-  user = prompt('Введите ваше имя:');
-  localStorage.setItem('user', user);
-}
-
-const params = new URLSearchParams(window.location.search);
-const room = params.get('room') || 'default';
-document.getElementById('room-name').textContent = `Чат: ${room}`;
-
-socket.emit('joinRoom', { room, user });
-
-const chatMessages = document.getElementById('chat-messages');
-socket.on('previousMessages', (messages) => {
-  messages.forEach(m => addMessage(m.user, m.text));
-});
-
-socket.on('newMessage', (m) => addMessage(m.user, m.text));
-
-function addMessage(user, text){
-  const div = document.createElement('div');
-  div.classList.add('message');
-  div.innerHTML = `<strong>${user}:</strong> ${text}`;
-  chatMessages.appendChild(div);
-  chatMessages.scrollTop = chatMessages.scrollHeight;
-}
-
-document.getElementById('chat-form').addEventListener('submit', (e)=>{
-  e.preventDefault();
-  const msg = document.getElementById('msg').value;
-  socket.emit('sendMessage', { room, user, text: msg });
-  document.getElementById('msg').value = '';
-});
-</script>
+  const socket = io();
+  let user = localStorage.getItem('user');
+  if(!user){
+    user = prompt('Введите ваше имя:');
+    localStorage.setItem('user', user);
+  }
+  
+  const params = new URLSearchParams(window.location.search);
+  const room = params.get('room') || 'default';
+  document.getElementById('room-name').textContent = `Чат: ${room}`;
+  
+  socket.emit('joinRoom', { room, user });
+  
+  const chatMessages = document.getElementById('chat-messages');
+  socket.on('previousMessages', (messages) => {
+    messages.forEach(m => addMessage(m.user, m.text));
+  });
+  
+  socket.on('newMessage', (m) => addMessage(m.user, m.text));
+  
+  function addMessage(messageUser, text){
+    const div = document.createElement('div');
+    div.className = `message ${messageUser === user ? 'own' : ''}`;
+    div.innerHTML = `<strong>${messageUser}:</strong> ${text}`;
+    chatMessages.appendChild(div);
+    chatMessages.scrollTop = chatMessages.scrollHeight;
+  }
+  
+  document.getElementById('chat-form').addEventListener('submit', (e)=>{
+    e.preventDefault();
+    const msg = document.getElementById('msg').value;
+    socket.emit('sendMessage', { room, user, text: msg });
+    document.getElementById('msg').value = '';
+  });
+  </script>
 </body>
 </html>
